--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,7 @@
   "version": "1.0",
   "description": "Meu menu de apps personalizados",
   "action": {
-    "default_popup": "index.html",
-    "default_icon": "icon.png"
+    "default_popup": "index.html"
   },
   "permissions": ["storage"]
 }
